syntax = "proto3";

package gc;

service EventService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message Event {
    uint64 ID = 1;
    string Name = 2;
    string Description = 3;
    string Date = 4;
}

message CreateRequest {
    Event event = 1;
}

message CreateResponse {
    Event event = 1;
}

message ReadRequest {
    uint64 event_ID = 1;
}

message ReadResponse {
    Event event = 1;
}

message UpdateRequest {
    Event event = 1;
}

message UpdateResponse {
    bool updated = 1;
}

message DeleteRequest {
    uint64 event_ID = 1;
}

message DeleteResponse {
    bool deleted = 1;
}

